Style fix for homepage to allow visualization of flash messages without vertical overflow

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,7 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .home {
-  height: 100vh;
-  background-image: url("chronicle_home.png");
-  background-size: cover;
+  height: 85vh;
+  background-image: url("chronicle_home_transparent.png");
+  background-size: contain;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
